--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -1,6 +1,7 @@
 {
   "nav.home": "Etusivu",
   "nav.features": "Ominaisuudet",
+  "nav.security": "Tietoturva",
   "nav.pricing": "Hinnoittelu",
   "nav.contact": "Yhteystiedot",
   "nav.getStarted": "Aloita",
@@ -94,6 +95,7 @@
   "cta.description": "Varaa henkilökohtainen demo nähdäksesi, miten Lyyli voi vähentää tietotulvaa ja parantaa viestinnän tehokkuutta asiantuntijaorganisaatiossasi.",
   "cta.button": "Varaa demo",
   "cta.demo": "Ajoita demo",
+  "cta.contactSales": "Ota yhteyttä myyntiin",
 
   "footer.tagline": "Tekoälyavusteinen viestintäassistentti ammattilaispalveluorganisaatioille",
   "footer.rights": "© 2024 Lyyli. Kaikki oikeudet pidätetään.",
@@ -468,5 +470,216 @@
   "cookies.page.description": "Ymmärrä, miten Lyyli käyttää evästeitä ja seurantatekniikoita säilyttäen yritystason turvallisuuden ja GDPR-vaatimustenmukaisuuden.",
   "cookies.title": "Evästekäytäntö",
   "cookies.updated": "Viimeksi päivitetty",
-  "cookies.intro": "Tämä evästekäytäntö selittää, miten Lyyli käyttää evästeitä ja vastaavia tekniikoita palvelujemme tarjoamiseen ja parantamiseen säilyttäen yritystason turvallisuusstandardit."
+  "cookies.intro": "Tämä evästekäytäntö selittää, miten Lyyli käyttää evästeitä ja vastaavia tekniikoita palvelujemme tarjoamiseen ja parantamiseen säilyttäen yritystason turvallisuusstandardit.",
+
+  "cybersecurity": {
+    "meta": {
+      "title": "Tietoturva ja yksityisyydensuoja Lyylissä - Yritystason kyberturvallisuus",
+      "description": "Tutustu Lyylin maailmanluokan tietoturvatoimiin, mukaan lukien AES-256 salaus, EU-palvelimet, GDPR-vaatimustenmukaisuus ja kattava tietosuoja asiantuntijaorganisaatioille.",
+      "keywords": "kyberturvallisuus, tietosuoja, GDPR-vaatimustenmukaisuus, AES-256 salaus, EU-palvelimet, yksityisyys, tietoturva, tietojen eristäminen, pääsynhallinta"
+    },
+    "hero": {
+      "title": "Tietoturva ja yksityisyydensuoja Lyylissä",
+      "subtitle": "Kun rakennamme AI-työkalua viestinnän tueksi, ymmärrämme täysin vastuumme asiakkaidemme tietojen suojaamisessa. Tietoturva ei ole meille pelkkä tekninen vaatimus, vaan liiketoimintamme kulmakivi.",
+      "contactButton": "Ota yhteyttä",
+      "featuresButton": "Katso ominaisuudet",
+      "imageAlt": "Kyberturvallisuus- ja tietosuoja-kuvitus, joka näyttää tietoturvatoimet ja yksityisyydensuojan"
+    },
+    "highlights": {
+      "gdpr": {
+        "title": "GDPR-yhteensopiva",
+        "description": "Täysi GDPR-yhteensopivuus alusta asti"
+      },
+      "euServers": {
+        "title": "EU-palvelimet",
+        "description": "Kaikki data pysyy EU:n alueella"
+      },
+      "encryption": {
+        "title": "AES-256 salaus",
+        "description": "Korkean tason salaus kaikelle datalle"
+      }
+    },
+    "securityFeatures": {
+      "title": "Kattavat tietoturvaratkaisut",
+      "subtitle": "Lyyli käsittelee päivittäin arkaluontoisia viestejä ja luottamuksellisia asiakirjoja. Siksi olemme rakentaneet maailmanluokan tietoturvan.",
+      "features": {
+        "encryption": {
+          "title": "End-to-End salaus",
+          "description": "AES-256 salaus kaikelle datalle sekä siirrossa että tallennuksessa"
+        },
+        "euDataCenters": {
+          "title": "EU-datacenterit",
+          "description": "Palvelimemme sijaitsevat EU:ssa, tietosi eivät poistu unionin alueelta"
+        },
+        "isolatedEnvironment": {
+          "title": "Eristetty ympäristö",
+          "description": "Yritysdatasi on täysin eristetty eikä sitä käytetä kielimallien kouluttamiseen"
+        },
+        "noThirdParties": {
+          "title": "Ei kolmansia osapuolia",
+          "description": "Tietojasi ei jaeta, myydä tai vuokrata kolmansille osapuolille"
+        },
+        "regularAudits": {
+          "title": "Säännölliset auditoinnit",
+          "description": "Suoritamme säännöllisiä tietoturva-auditointeja ulkopuolisten asiantuntijoiden kanssa"
+        },
+        "accessManagement": {
+          "title": "Käyttöoikeuksien hallinta",
+          "description": "Tarkka käyttöoikeuksien hallinta ja toimintojen lokitus"
+        }
+      }
+    },
+    "technicalArchitecture": {
+      "title": "Tekninen arkkitehtuuri ja tietojen käsittely",
+      "subtitle": "Lyyli toimii täysin pilvipohjaisena ratkaisuna, jossa kaikki data kulkee salattuna.",
+      "sections": {
+        "encryption": {
+          "title": "Salaus ja tietoturva",
+          "aes256": {
+            "title": "AES-256 salaus",
+            "description": "Käytämme AES-256 salausta sekä tietojen siirtoon että tallennukseen"
+          },
+          "secureTransmission": {
+            "title": "Turvallinen siirto",
+            "description": "Kaikki tiedonsiirto tapahtuu TLS 1.3 -protokollalla suojattuna"
+          },
+          "euCloudServices": {
+            "title": "EU-pilvipalvelut",
+            "description": "Palvelumme pyörii EU:n alueella sijaitsevilla palvelimilla"
+          },
+          "infrastructureStandards": {
+            "title": "Infrastruktuurin standardit",
+            "description": "Noudatamme alalla yleisiä standardeja. Lähestymme tietoturvaa ISO27001-viitekehyksen mukaisesti ja tulemme sertifioimaan palvelun."
+          },
+          "dataIsolation": {
+            "title": "Tietojen eristäminen",
+            "description": "Jokaisen asiakkaan data säilytetään täysin eristettynä omassa ympäristössään. Tietojasi ei koskaan käytetä tekoälymallien kouluttamiseen lukuun ottamatta organisaatiosi omaa ympäristöä. Tämä tarkoittaa, että kilpailijasi eivät voi hyötyä teidän datastanne, ja te ette hyödy heidän datastaan - jokainen organisaatio on täysin itsenäinen."
+          }
+        }
+      }
+    },
+    "gdprCompliance": {
+      "title": "GDPR-yhteensopivuus käytännössä",
+      "subtitle": "Olemme rakentaneet Lyylin GDPR:n vaatimusten mukaisesti alusta asti.",
+      "features": {
+        "dataMinimization": {
+          "title": "Tietojen minimointi",
+          "description": "Käsittelemme vain välttämättömiä tietoja palvelun toiminnalle"
+        },
+        "purposeLimitation": {
+          "title": "Käyttötarkoituksen rajaus",
+          "description": "Tietojasi käytetään vain viestinnän parantamiseen ja palvelun toimittamiseen"
+        },
+        "rightToDeletion": {
+          "title": "Oikeus poistamiseen",
+          "description": "Voit pyytää tietojesi poistamista 30 päivän kuluessa"
+        },
+        "dataPortability": {
+          "title": "Tietojen siirrettävyys",
+          "description": "Kaikki datasi toimitetaan koneluettavassa muodossa"
+        },
+        "dedicatedDPO": {
+          "title": "Nimetty tietosuojavastaava",
+          "description": "Meillä on nimetty tietosuojavastaava, joka vastaa kaikkiin tietosuojaan liittyviin kysymyksiin nopeasti ja kattavasti. Uskomme, että avoimuus on paras tapa rakentaa luottamusta."
+        }
+      },
+      "benefits": {
+        "quickResponse": "Nopea vastausaika",
+        "expertSupport": "Asiantunteva tuki",
+        "fullTransparency": "Täysi avoimuus"
+      }
+    },
+    "accessControl": {
+      "title": "Käyttöoikeudet ja pääsynhallinta",
+      "subtitle": "Lyylissä on toteutettu tarkka käyttöoikeuksien hallinta ja kattava toimintojen seuranta.",
+      "sections": {
+        "control": {
+          "title": "Hallittavuus ja valvonta",
+          "roleBasedAccess": {
+            "title": "Roolipohjainen pääsy",
+            "description": "Organisaatiosi jäsenet näkevät vain ne tiedot, joihin heillä on oikeus"
+          },
+          "administratorControl": {
+            "title": "Järjestelmänvalvojan hallinta",
+            "description": "Järjestelmänvalvojat voivat hallita käyttöoikeuksia yksityiskohtaisesti"
+          },
+          "activityLogging": {
+            "title": "Toimintojen lokitus",
+            "description": "Kaikki järjestelmään kirjautumiset ja toiminnot lokitetaan turvallisesti"
+          },
+          "automaticMonitoring": {
+            "title": "Automaattinen valvonta",
+            "description": "Epäilyttävä toiminta havaitaan automaattisesti ja siitä ilmoitetaan välittömästi"
+          }
+        }
+      }
+    },
+    "continuousDevelopment": {
+      "title": "Jatkuva kehitystyö",
+      "subtitle": "Tietoturva ei ole meille kertaluontoinen projekti, vaan jatkuva prosessi.",
+      "features": {
+        "regularUpdates": {
+          "title": "Säännölliset päivitykset",
+          "description": "Päivitämme järjestelmiämme säännöllisesti ja seuraamme tietoturvauhkia aktiivisesti"
+        },
+        "externalAudits": {
+          "title": "Ulkopuoliset auditoinnit",
+          "description": "Teemme säännöllisiä tietoturva-auditointeja ja testaamme järjestelmiämme ulkopuolisten asiantuntijoiden kanssa"
+        },
+        "staffTraining": {
+          "title": "Henkilöstön koulutus",
+          "description": "Henkilökuntamme koulutetaan jatkuvasti tietoturva-asioissa, koska turvallisuus on ketjun heikoimman lenkin varassa"
+        },
+        "threatMonitoring": {
+          "title": "Uhkien seuranta",
+          "description": "Kehitämme suojauksiamme aina vain paremmiksi ja reagoimme nopeasti uusiin uhkiin"
+        }
+      },
+      "commitment": {
+        "title": "Sitoutumisemme tietoturvaan",
+        "description": "Loppujen lopuksi tietoturva on luottamuskysymys. Me luotamme sinuun jakamalla parhaat käytäntömme, ja toivomme, että sinä luotat meihin antamalla Lyylin auttaa viestinnässäsi. Olemme sitoutuneet ylläpitämään korkeinta mahdollista tietoturvan tasoa ja kehittämään sitä jatkuvasti."
+      }
+    },
+    "support": {
+      "title": "Yhteistyö ja tuki",
+      "subtitle": "Jos sinulla on kysymyksiä tietoturvasta tai yksityisyydensuojasta, älä epäröi ottaa yhteyttä.",
+      "channels": {
+        "email": {
+          "title": "Sähköposti",
+          "description": "Nopea vastaus tietoturvakysymyksiin",
+          "address": "hello@lyyli.ai"
+        },
+        "chat": {
+          "title": "Chat-tuki",
+          "description": "Välitön apu tietoturvakysymyksiin",
+          "button": "Aloita chat"
+        },
+        "phone": {
+          "title": "Puhelintuki",
+          "description": "Henkilökohtainen tuki suurille asiakkaille",
+          "button": "Varaa aika"
+        }
+      },
+      "dpo": {
+        "title": "Tietosuojavastaava",
+        "description": "Meillä on nimetty tietosuojavastaava, joka vastaa kaikkiin GDPR ja tietosuojaan liittyviin kysymyksiin. Saat asiantuntevan vastauksen aina 24 tunnin kuluessa.",
+        "button": "Ota yhteyttä tietosuojavastaavaan"
+      }
+    }
+  },
+
+  "stats": {
+    "title": "Suorituskyky puhuu puolestaan",
+    "subtitle": "Koe salamannopea tekoälyviestintä optimoidulla alustallamme",
+    "fasterResponse": "Nopeampi vastausaika",
+    "uptimeReliability": "Käyttöajan luotettavuus",
+    "growing": "Kasvava",
+    "stable": "Vakaa"
+  },
+
+  "desktop": {
+    "title": "Koe Lyyli työpöydällä",
+    "subtitle": "Tehokas työpöytäliittymä suunniteltu tuottavuutta ja saumatonta tiimiyhteistyötä varten.",
+    "experience": "Työpöytäkokemus"
+  }
 }
