Fix project to follow updated @05-brand.mdc rules - Correct all color values to match brand book specifications - Replace font-semibold with font-bold for proper brand typography - Update Tailwind config and CSS variables with exact brand colors - Fix typography hierarchy to use correct font weights and sizes - Ensure all components follow brand guidelines for consistency

--- a/content/blog/fi/lyyli-funding-announcement.mdx
+++ b/content/blog/fi/lyyli-funding-announcement.mdx
@@ -94,7 +94,7 @@ Ota rohkeasti yhteyttä, jos haluat keskustella:
 
 <div class="text-center my-8">
 
-<a href="https://lyyli.ai/demo" class="inline-block bg-forest text-white font-semibold py-3 px-6 rounded-lg hover:bg-forest/90 transition-colors duration-200 shadow-soft">
+<a href="https://lyyli.ai/demo" class="inline-block bg-forest text-white font-bold py-3 px-6 rounded-lg hover:bg-forest/90 transition-colors duration-200 shadow-soft">
 
 Varaa henkilökohtainen demo
 
